Added transfer rate and remaining time.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
@@ -11,6 +11,8 @@
                     <div>Select File...</div>
                 </div>
             </div>
+            <span id="uploader-speed"></span><br>
+            <span id="uploader-remaining"></span>
             <span class="qq-drop-processing-selector qq-drop-processing">
                 <span>Processing dropped files...</span>
                 <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
