--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
@@ -7,7 +7,7 @@
                 <span class="qq-upload-drop-area-text-selector"></span>
             </div>
             <div class="buttons">
-                <div class="qq-upload-button-selector qq-upload-button">
+                <div class="qq-upload-button-selector qq-upload-button ui-state-default">
                     <div>Select File...</div>
                 </div>
             </div>
