hide upload button when file list is populated

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -26,7 +26,7 @@
                     <table class="tab-table">
                         <tr>
                             <td>
-                                <div id="fine-uploader-manual-trigger"></div>
+                                <div id="fine-uploader"></div>
                             </td>
                             <td>
                              <span class="field-help">
