--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission-uploader.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission-uploader.css
@@ -6,36 +6,44 @@
     background-image: none;
 }
 
-#fine-uploader-manual-trigger .qq-upload-button {
+#fine-uploader .qq-upload-button {
     margin-right: 15px;
 }
 
-#fine-uploader-manual-trigger .buttons {
+#fine-uploader .buttons {
     width: 36%;
 }
 
-#fine-uploader-manual-trigger .qq-uploader {
+#fine-uploader .qq-uploader {
     overflow-x: hidden;
 }
 
-#fine-uploader-manual-trigger .qq-uploader .qq-total-progress-bar-container {
+#fine-uploader .qq-uploader .qq-total-progress-bar-container {
     width: 60%;
     /* hide total progress bar, for now, since we're limiting to one file */
     display: none;
 }
 
-#fine-uploader-manual-trigger .qq-upload-button {
+#fine-uploader .qq-upload-button {
     border-radius: 4px;
 }
 
-#fine-uploader-manual-trigger .qq-upload-button-hover {
+#fine-uploader .qq-upload-button-hover {
     border: 1px solid #999999;
     background: #dadada;
     color: #212121;
 }
 
-#fine-uploader-manual-trigger .qq-upload-button:active {
+#fine-uploader .qq-upload-button:active {
     border: 1px solid #aaaaaa;
     background: #ffffff;
     color: #212121;
+}
+
+#upload-info {
+    margin-top: 10px;
+}
+
+#uploader-remaining {
+    margin-left: 10px;
 }
