--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/uploader-template.html.twig
@@ -1,4 +1,4 @@
-    <script type="text/template" id="qq-template-manual-trigger">
+    <script type="text/template" id="qq-template">
         <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="or Drop File Here">
             <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
                 <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
@@ -11,8 +11,6 @@
                     <div>Select File...</div>
                 </div>
             </div>
-            <span id="uploader-speed"></span><br>
-            <span id="uploader-remaining"></span>
             <span class="qq-drop-processing-selector qq-drop-processing">
                 <span>Processing dropped files...</span>
                 <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
@@ -36,6 +34,10 @@
                     <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
                 </li>
             </ul>
+            <div id="upload-info">
+                <span id="uploader-speed"></span>
+                <span id="uploader-remaining"></span>
+            </div>
 
             <dialog class="qq-alert-dialog-selector">
                 <div class="qq-dialog-message-selector"></div>
