better verbiage for direct upload

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -21,7 +21,11 @@
             </ul>
 
             <div id="tabs-1"> <!-- Direct Upload -->
-                You may upload a single dataset file of any size using direct upload. If your upload is interrupted, the upload will retry automatically or you may return to this page and select the same file and it will resume where it left off. You may also manually pause your upload and continue later.
+                You may upload a single dataset file of any size using direct upload.
+                If your upload is interrupted, it will attempt to resume automatically.
+                You may also manually pause your upload and continue later.<br>
+                Note: Even if this window or your web browser has been closed before transfer is complete,
+                you may return to this page, select the same file, and transfer will resume where it left off.
                 <fieldset>
                     <table class="tab-table">
                         <tr>
