Fix submit button, so no JS error happens.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -118,5 +118,5 @@
         </div> <!-- tabs -->
 
     </fieldset> <!-- Dataset File Transfer Details -->
-    {{ form_widget(form.submit) }}
+    {{ form_widget(form.submitButton) }}
 </div>
