use first filter instead of index 0 for contacts

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -1,7 +1,7 @@
 <fieldset>
     <legend>Dataset Contact</legend>
     <table class="tab-table">
-        {% set contact = form.datasetContacts[0]|default %}
+        {% set contact = form.datasetContacts | first %}
         <tr>
             <td>
                 <label for="contactperson">Name</label>
