Hide and show extra fields for spatial and non-spatial extent.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -22,6 +22,11 @@
                     <div id="spatwizbtn"></div>
                 </td>
             </tr>
+        </table>
+        <table class="tab-table" id="spatialExtras">
+            <tr>
+                <td colspan="2"></td>
+            </tr>
             <tr>
                 <td>
                     {{ form_row(form.temporalExtentDesc) }}
