Fixed dateType and added temporal extent description

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_RoleCode.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_RoleCode.xml.twig
@@ -22,4 +22,4 @@
     {% set codespace="011" %}
 {% endif %}
 
-<gmd:CI_RoleCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_RoleCode" codeListValue="{{role}}" codeSpace="{{codespace}}">{{codespace}}</gmd:CI_RoleCode>
+<gmd:CI_RoleCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_RoleCode" codeListValue="{{role}}" codeSpace="{{codespace}}">{{role}}</gmd:CI_RoleCode>
