Added load from URL button.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
@@ -1,8 +1,13 @@
 {{ form_start(xmlForm) }}
     <div style="display:none;">
-        {{ form_widget(xmlForm) }}
+        {{ form_widget(xmlForm.xmlFile) }}
+        {{ form_row(xmlForm.xmlUrl) }}
     </div>
-{{ form_end(form, {'render_rest': false}) }}
+    <div id="urlDialog" title="Please enter the URL for a Metadata File">
+        <label for="xmlURI">Metadata URL:</label>
+        <input type="text" id="xmlURI" size="100">
+    </div>
+{{ form_end(xmlForm, {'render_rest': false}) }}
 
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
     <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
