--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
@@ -11,8 +11,8 @@
 
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
     <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
-        <button type="button" id="btn-upload">Load from File</button>
-        <button type="button" id="btn-from-url">Load from URL</button>
+        <button type="button" id="btn-upload">Import XML Metadata From File</button>
+        <button type="button" id="btn-from-url">Import XML Metadata from URL</button>
         <button type="button" id="btn-save">Save and Continue later</button>
     </div>
 
