--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -57,7 +57,27 @@
                     </gmd:role>
                 </gmd:CI_ResponsibleParty>
             </gmd:distributorContact>
-            <gmd:distributorFormat/>
+            {% if dataset.datasetSubmission.distributionFormatName|default is empty and dataset.datasetSubmission.fileDecompressionTechnique|default is empty %}
+                <gmd:distributorFormat />
+            {% else %}
+                <gmd:distributorFormat>
+                    <gmd:MD_Format>
+                        {% if dataset.datasetSubmission.distributionFormatName|default is empty %}
+                            <gmd:name gco:nilReason="missing" />
+                        {% else %}
+                            <gmd:name>
+                                <gco:CharacterString>{{ dataset.datasetSubmission.distributionFormatName }}</gco:CharacterString>
+                            </gmd:name>
+                        {% endif %}
+                        <gmd:version gco:nilReason="inapplicable" />
+                        {% if not dataset.datasetSubmission.fileDecompressionTechnique|default is empty %}
+                            <gmd:fileDecompressionTechnique>
+                                <gco:CharacterString>{{ dataset.datasetSubmission.fileDecompressionTechnique }}</gco:CharacterString>
+                            </gmd:fileDecompressionTechnique>
+                        {% endif %}
+                    </gmd:MD_Format>
+                </gmd:distributorFormat>
+            {% endif %}
             <gmd:distributorTransferOptions>
                 <gmd:MD_DigitalTransferOptions>
                     {% if dataset.datasetSubmission.datasetFileSize|default is empty %}
