Ignore datasetFileUrl validity for accesing the submit tab and validate it on keyup or change

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -95,7 +95,7 @@
                         <tr>
                             <td>
                                 <div class="fwtextboxcont">
-                                    {{ form_row(form.datasetFileUrl) }}
+                                    {{ form_row(form.datasetFileUrl, { attr: { class: 'ignore'} }) }}
                                 </div>
                                 {% if showForceDownload %}
                                     <div class="file_force">
