Added basic datatable, js, and twig template.
* Added custom js for this simplifed use of datatables.
* Added new template with datatable form.
* Modified form.html.twig to include new template.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -22,4 +22,7 @@
                 </form>
             </fieldset>
         </p>
+        <fieldset>
+            {% include "PelagosAppBundle:List:DatasetsApprovedDifs.html.twig" %}
+        </fieldset>
 </div>
