--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
@@ -25,13 +25,13 @@
             [
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
                 '//maps.google.com/maps/api/js?v=3',
-                '/includes/geoviz/geoviz.js',
             ]
         )
     }}
 
     {% javascripts
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
+        '@PelagosAppBundle/Resources/public/js/geoviz.js'
         '@PelagosAppBundle/Resources/public/js/mdapp-ul.js'
     %}
         {{ add_js(asset_url) }}
