Added Google Map API key as Symfony parameter

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
@@ -26,7 +26,7 @@
     {{ add_js(
             [
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
-                '//maps.google.com/maps/api/js?v=3',
+                '//maps.google.com/maps/api/js?v=3&key=' ~ google_maps_api_key,
             ]
         )
     }}
