--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -32,7 +32,7 @@
                 '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
-                '//maps.google.com/maps/api/js?v=3',
+                '//maps.google.com/maps/api/js?v=3&key=' ~ google_maps_api_key,
                 '//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.1/jstree.min.js',
             ]
         )
