--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
@@ -24,7 +24,7 @@
     {{ add_js(
             [
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
-                '//maps.google.com/maps/api/js?v=3',
+                '//maps.google.com/maps/api/js?v=3&key=' ~ google_maps_api_key,
             ]
         )
     }}
