Filtered via user's RG(s), or no filter for DRPM.
* Send list of Research Group IDs to template.
* Refactor api query in template to send in RG list.
* GCS Cleanup

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetsApprovedDifs.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetsApprovedDifs.html.twig
@@ -54,7 +54,15 @@ set properties = [
     class = "entityTable stripe"
     width = "100%"
     data-ajax = '{
-        "url": "{{ path('pelagos_api_datasets_get_collection', {'_properties': properties | join(',')}) }}",
+        "url": "{{ path('pelagos_api_datasets_get_collection') }}",
+        "data": {
+                    "_properties": "{{ properties | join(',') }}",
+                    "dif.status": 2
+                    {% if not is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
+                    ,
+                    "researchGroup": "{{ researchGroupList | join(',') }}"
+                    {% endif %}
+                },
         "dataSrc": "",
         "cache": true
     }'
