--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -40,30 +40,23 @@
                 '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
                 '//cdnjs.cloudflare.com/ajax/libs/file-uploader/5.11.8/jquery.fine-uploader/jquery.fine-uploader.min.js',
-                '//maps.google.com/maps/api/js?v=3&key=AIzaSyBJjBREwu85aoCAbqqk-htGlPdSX7HAb6s',
-                '/includes/geoviz/geoviz.js',
-                '/includes/geoviz/mapWizard.js',
+                '//maps.google.com/maps/api/js?v=3&key=' ~ google_maps_api_key,
             ]
         )
     }}
 
-    {% javascripts '@PelagosAppBundle/Resources/public/js/fileBrowser.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/common.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
+    {% javascripts
+        '@FOSJsRoutingBundle/Resources/public/js/router.js'
+        '@PelagosAppBundle/Resources/public/js/common.js'
+        '@PelagosAppBundle/Resources/public/js/fileBrowser.js'
+        '@PelagosAppBundle/Resources/public/js/geoviz.js'
+        '@PelagosAppBundle/Resources/public/js/mapWizard.js'
+        '@PelagosAppBundle/Resources/public/js/dataset-submission.js'
+    %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
     {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-submission.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
 
     {% include 'PelagosAppBundle:DatasetSubmission:uploader-template.html.twig' %}
 
