--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetsApprovedDifs.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetsApprovedDifs.html.twig
@@ -1,4 +1,3 @@
-{% block head %}
     {{
         add_library (
             [
@@ -16,7 +15,9 @@
         )
     }}
 
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/entity.css' %}
+    {% stylesheets
+        '@PelagosAppBundle/Resources/public/css/entity.css'
+     %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
 
@@ -37,8 +38,6 @@
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
-{% endblock %}
-
 {%
 set properties = [
     'researchGroup.name',
@@ -47,7 +46,6 @@ set properties = [
 ]
 %}
 
-{% block body %}
 <table
     entityNiceName = "Datasets"
     entityApi = "{{ path('pelagos_app_ui_datasetsubmission_default') }}"
@@ -83,5 +81,4 @@ set properties = [
         </tr>
     </thead>
 </table>
-{% endblock %}
 
