Added header per ticket

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -23,6 +23,7 @@
             </fieldset>
         </p>
         <fieldset>
+            <b>Approved Dataset Information Forms</b>
             {% include "PelagosAppBundle:List:DatasetsApprovedDifs.html.twig" %}
         </fieldset>
 </div>
