CSS tweaks, moved template to DatasetSubmission

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/DatasetsApprovedDifs.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/DatasetsApprovedDifs.html.twig
@@ -17,6 +17,7 @@
 
     {% stylesheets
         '@PelagosAppBundle/Resources/public/css/entity.css'
+        '@PelagosAppBundle/Resources/public/css/datasetsWithApprovedDifs.css'
      %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
