--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -24,6 +24,6 @@
         </p>
         <fieldset>
             <b>Approved Dataset Information Forms</b>
-            {% include "PelagosAppBundle:List:DatasetsApprovedDifs.html.twig" %}
+            {% include "PelagosAppBundle:DatasetSubmission:DatasetsApprovedDifs.html.twig" %}
         </fieldset>
 </div>
