Set initial sort to RG and UDI

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/DatasetsApprovedDifs.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/DatasetsApprovedDifs.html.twig
@@ -71,6 +71,7 @@ set properties = [
         { "data": "title" }
     ]'
     data-order = '[
+        [ 0, "asc" ],
         [ 1, "asc" ]
     ]'
     >
