moved css into existing file, filename cleanups

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -139,3 +139,8 @@ fieldset
 #restrictions label{
     display: inline;
 }
+
+table.dataTable.stripe tbody tr:hover {
+    cursor: pointer;
+    background-color: #becacd;
+}
